# netmind

./: .gitignore  AGENTS.md  Makefile  README.md  check_mcp.py  pyproject.toml
netmind/: __init__.py  app.py  core.py  mcp_stdio.py  protocols.py
netmind/templates/: dashboard.html
tests/: conftest.py  test_cli_args.py  test_mcp_server.py  test_netmind.py  test_protocols.py  test_proxy_lifecycle.py  test_proxy_status.py  test_startup_proxies.py
